@@ -54,6 +54,10 @@
  * @version	1.3.4
  * @date	March 15, 2015
  * Adjusted CSS to not reference `li` elements in default widget styles
+ *
+ * @version	1.4
+ * @date	April 18, 2015
+ * Added class definition to hide comment link text when comments are closed and there are no comments
  */
 
 /** Table of Contents ------------------------------------------------------- */
@@ -1168,6 +1172,10 @@ ul.featured-search-pages {
 /** === Comments === -------------------------------------------------------- */
 h5.comments-link {
 	padding-left: 11px;
+}
+
+h5.comments-link.comments-closed.no-comments {
+	display: none;
 }
 
 .comments-wrapper ul.comments-list,
